files/style.css
#main-grid {
	display: block;
}

.expandible {
	-webkit-transition: height 0.5s ease-out;
	-moz-transition: height 0.5s ease-out;
	-o-transition: height 0.5s ease-out;
	-ms-transition: height 0.5s ease-out;
	transition: height 0.5s ease-out;
	overflow: hidden;
}

.no-transition {
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-o-transition: none !important;
	-ms-transition: none !important;
	transition: none !important;
}

input[type=text], input[type=password], input[type=date], input[type=time], input[type=number], textarea, select {
	padding: 0 5px;
	border: solid #b3b3b3 1px;
	font-family: 'Lato', sans-serif;
	font-size: 1rem;
	width: 100%;
	height: 32px;
	box-sizing: border-box;
	color: #808080;
}

textarea {
	height: 170px;
}

#header-username {
	padding-left: 5px;
}

#main-page-cont {
	height: 100%;
	background-color: #FFF;

	-webkit-transition: width 0.3s ease-out;
	-moz-transition: width 0.3s ease-out;
	-o-transition: width 0.3s ease-out;
	-ms-transition: width 0.3s ease-out;
	transition: width 0.3s ease-out;
	overflow: hidden;
}

#toolbar {
	background: #f2f2f2;
	padding: 5px 5px;
	font-size: 0;
	height: 45px;
	overflow: hidden;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	white-space: nowrap;
}

#toolbar > * {
	font-size: 1.1rem;
	display: inline-block;
	vertical-align: middle;
	line-height: 35px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.toolbar-button, .toolbar-button:link, .toolbar-button:visited {
	color: #000;
	border-right: solid #CCC 1px;
	height: 35px;
	line-height: 32px;
	padding: 0 10px;
}

#topForm {
	padding: 0 5px;
}

#topForm .flex-fields > div {
	padding-top: 0;
	padding-bottom: 0;
}

#main-page {
	overflow-x: hidden;
	overflow-y: auto;
	position: relative;
}

#main-content {
	padding: 0 10px;
	position: relative;
	-webkit-transition: left 0.3s ease-out;
	-moz-transition: left 0.3s ease-out;
	-o-transition: left 0.3s ease-out;
	-ms-transition: left 0.3s ease-out;
	transition: left 0.3s ease-out;
}

#main-loading {
	text-align: center;
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
	z-index: 200;
}

#main-loading.grey {
	background: rgba(200, 200, 200, 0.5);
}

#main-loading img {
	position: absolute;
	top: 50%;
	margin-top: -0.5em;
}

#breadcrumbs {
	color: #999;
	padding: 10px;
	overflow: hidden;
	font-size: 11px;
}

#breadcrumbs a:link, #breadcrumbs a:visited, #breadcrumbs a:hover {
	color: #999;
}

#breadcrumbs a:first-of-type {
	color: #00ADEF;
}

#results-table-count, #results-table-pages {
	padding-bottom: 10px;
}

#results-table-count {
	float: left;
}

#results-table-count > div:first-of-type {
	display: inline-block;
	font-weight: bold;
}

#results-table-pages {
	float: right;
}

#table-headings {
	font-size: 0;
	overflow: hidden;
	padding-right: 20px;
}

#table-headings > div {
	overflow: hidden;
	white-space: nowrap;
	display: inline-block;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}

#table-headings > div > div {
	font-family: 'Raleway', sans-serif;
	font-size: 1rem;
	display: inline-block;
	box-sizing: border-box;
	padding-left: 10px;
	height: 30px;
	line-height: 28px;
	text-transform: capitalize;
	color: #333;
	vertical-align: middle;
	background: #f7f7f6;
	border: solid #ececec 1px;
	border-right: none;
	border-bottom: none;
}

#table-headings > div > div:last-of-type {
	border-right: solid #ececec 1px;
}

.table-headings-label, .results-table-row > div {
	white-space: nowrap;
	overflow: hidden;
}

.table-headings-resize {
	float: right;
	width: 10px;
	height: 30px;
	cursor: ew-resize;
}

.table-headings-label {
	width: calc(100% - 10px);
	cursor: default;
}

.table-headings-label.sortable {
	cursor: pointer;
}

.table-headings-label.sortable:hover, .table-headings-label.selected {
	color: #00ADEF;
}

.special-cell {
	text-align: center;
	width: 30px !important;
}

.just-for-calculation {
	display: inline-block !important;
	width: auto !important;
}

#results-table {
	overflow: auto;
	padding-bottom: 3px;

	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.results-table-row-cont {
	height: 30px;
	font-size: 0;
}

.results-table-row {
	white-space: nowrap;
	position: relative;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	display: inline-block;

	-webkit-transition: top 0.3s ease-out;
	-moz-transition: top 0.3s ease-out;
	-o-transition: top 0.3s ease-out;
	-ms-transition: top 0.3s ease-out;
	transition: top 0.3s ease-out;
}

.results-table-row.selected {
	border: solid #44c48d 1px;
}

.results-table-row.moving {
	-webkit-transition: none;
	-moz-transition: none;
	-o-transition: none;
	-ms-transition: none;
	transition: none;
	position: absolute;
	z-index: 10;
	opacity: 0.9;
}

#results-table-row-segnaposto {
	width: 100%;
	height: 30px;
	position: absolute;
	background: #FFA64C;
	opacity: 0.4;
	z-index: 5;
}

.results-table-row > div {
	font-size: 1rem;
	display: inline-block;
	box-sizing: border-box;
	padding: 6px;
	height: 30px;
	cursor: pointer;
	border-right: solid #ececec 1px;
	border-bottom: solid #ececec 1px;
}

div:first-of-type > .results-table-row > div {
	border-top: solid #ececec 1px;
}

.results-table-row > div:first-of-type {
	border-left: solid #ececec 1px;
}

div:nth-child(even) > .results-table-row {
	background: #FAFAFA;
}

div:nth-child(odd) > .results-table-row {
	background: #FFF;
}

.results-table-row:hover > div {
	background: rgba(205, 205, 205, 0.4);
}

.results-table-row div.editable-cell {
	padding: 0;
	text-align: center;
}

.results-table-row div input, .results-table-row select {
	margin: 0;
}

.results-table-row div.editable-cell input, .results-table-row div.editable-cell select {
	height: 30px;
	padding: 0 7px;
	border: none;
}

.results-table-row div.editable-cell input[type="checkbox"] {
	padding: 0;
	margin-top: 7px;
	height: auto;
}

.tools-lightbox {
	position: fixed;
	background: #FFF;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	-webkit-box-shadow: 3px 3px 6px #333;
	-moz-box-shadow: 3px 3px 6px #333;
	box-shadow: 3px 3px 6px #333;
	z-index: 100;
	border: solid #EEE 1px;
	border-top: none;

	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 15px;

	-webkit-transition: -webkit-transform 0.2s ease-in;
	-moz-transition: -moz-transform 0.2s ease-in;
	-o-transition: -o-transform 0.2s ease-in;
	-ms-transition: -ms-transform 0.2s ease-in;
	transition: transform 0.2s ease-in;
}

#filtersFormCont {
	margin-top: 10px;
}

input[data-managesearchfields] {
	display: none;
}

input[data-managesearchfields] + label {
	padding: 10px;
	cursor: pointer;
	width: 100%;
	display: block;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background-color: rgba(255, 255, 255, 1);
	-webkit-transition: background-color 0.2s ease-out;
	-moz-transition: background-color 0.2s ease-out;
	-ms-transition: background-color 0.2s ease-out;
	-o-transition: background-color 0.2s ease-out;
	transition: background-color 0.2s ease-out;
}

input[data-managesearchfields] + label:hover {
	background-color: rgba(161, 207, 229, 0.3);
}

input[data-managesearchfields]:checked + label {
	background-color: rgba(161, 207, 229, 0.5);
}

input[data-managefilters] {
	display: none;
}

input[data-managefilters] + label {
	padding: 10px;
	cursor: pointer;
	display: inline-block;
	margin: 5px 3px;
	background-color: rgba(255, 255, 255, 1);
	-webkit-transition: background-color 0.2s ease-out;
	-moz-transition: background-color 0.2s ease-out;
	-ms-transition: background-color 0.2s ease-out;
	-o-transition: background-color 0.2s ease-out;
	transition: background-color 0.2s ease-out;
}

input[data-managefilters] + label:hover, input[data-managefilters]:checked + label {
	background-color: rgba(161, 207, 229, 0.5);
}

#history-box {
	position: fixed;
	top: 0;
	width: 15%;
	height: 100%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background: rgba(255, 255, 255, 0.9);
	padding: 10px 0;
	transition: right 0.5s ease-out;
	border-left: solid #555 1px;
	z-index: 20;
}

#links-history {
	height: calc(100% - 30px);
	overflow-y: auto;
}

.link-history:link, .link-history:visited {
	display: block;
	padding: 5px 15px;
	color: #000;
	border-bottom: dashed #777 1px;
}

.link-history:hover {
	background: rgba(161, 207, 229, 0.35);
	text-decoration: none;
}

.link-history.disabled {
	color: #888;
}

.sublist-template {
	display: none;
}

.sublist-row > * {
	vertical-align: middle;
}

#main-loading-bar-cont {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	z-index: 100;
	height: 10px;
}

#main-loading-bar {
	background: #4CD2FF;
	transition: width 0.5s ease-out;
	height: 10px;
}

.admin-tabs {
	border-bottom: solid #e6e6e6 1px;
	font-size: 0;
	font-family: 'Raleway', sans-serif;
}

.admin-tabs > * {
	display: inline-block;
	font-size: 14px;
}

.admin-tabs > a {
	background: #999;
	padding: 5px 10px;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	color: #FFF;
	text-decoration: none;
	margin: 0 1px;
	cursor: pointer;
}

.admin-tabs > a.admin-tab:hover, .admin-tabs > a.admin-tab.selected {
	background: #71af71;
	text-decoration: none;
}

[data-subpages] [data-subpage] {
	display: none;
}

@media print {
	#header, #toolbar, #breadcrumbs {
		display: none !important;
	}

	#header {
		overflow: hidden;
	}

	#main-page-cont {
		transition: none;
		margin-left: 0px !important;
		border-left: none !important;
		width: 100%;
	}
}

